--- a/CCP-PL.html
+++ b/CCP-PL.html
@@ -138,7 +138,7 @@
                 />
                 <div>
                   <h3>Hourly Rates</h3>
-                  <p>$40 per Hour</p>
+                  <p>$60 per Hour</p>
                   <br>
                   <p>This includes all of our Services Remotely or Mobile</p>
                 </div>
@@ -151,7 +151,7 @@
                 />
                 <div>
                   <h3>Kilometres</h3>
-                  <p>$4 per Km Travelled</p>
+                  <p>$2 per Km Travelled</p>
                   <br>
                   <p>If the job is a quick fix you may only be charged the kms to get to site</p>
                 </div>
@@ -188,7 +188,7 @@
             />
             <div>
               <h3>Hourly Rates</h3>
-              <p>$20 per Hour</p>
+              <p>$30 per Hour</p>
               <br>
               <p>This includes all of our Services Remotely or Mobile</p>
             </div>
@@ -201,7 +201,7 @@
             />
             <div>
               <h3>Kilometres</h3>
-              <p>$4 per Km Travelled</p>
+              <p>$2 per Km Travelled</p>
               <br>
               <p>If the job is a quick fix you may only be charged the kms to get to site</p>
             </div>
@@ -226,7 +226,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">CoastComputersPlus@gmail.com</a></p>
+          <p><a href="mailto:CoastComputersPlus@gmail.com">CoastComputersPlus@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -234,7 +234,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://wa.me/0423643317">0423 643 317</a></p>
+          <p><a href="https://wa.me/0402570612">0402 570 612</a></p>
         </div>
       </div>
     </section>
