--- a/CCP-ACCP.html
+++ b/CCP-ACCP.html
@@ -149,7 +149,28 @@
           </div>
         </div>
       </section>
-    
+      <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+          <div class="contact-info-container">
+            <img
+              src="email.png"
+              alt="Email icon"
+              class="icon contact-icon email-icon"
+            />
+            <p><a href="mailto:CoastComputersPlus@gmail.com">CoastComputersPlus@gmail.com</a></p>
+          </div>
+          <div class="contact-info-container">
+            <img
+              src="linkedin.png"
+              alt="LinkedIn icon"
+              class="icon contact-icon"
+            />
+            <p><a href="https://wa.me/0402570612">0402 570 612</a></p>
+          </div>
+        </div>
+      </section>
     <footer>
       <nav>
         <div class="nav-links-container">
