--- a/CCP-DA.html
+++ b/CCP-DA.html
@@ -181,7 +181,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">CoastComputersPlus@gmail.com</a></p>
+          <p><a href="mailto:coastcomputersplus@gmail.com">CoastComputersPlus@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -189,7 +189,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://wa.me/0423643317">0423 643 317</a></p>
+          <p><a href="https://wa.me/0402570612">0402570612</a></p>
         </div>
       </div>
     </section>
