--- a/CCP-TMD.html
+++ b/CCP-TMD.html
@@ -179,7 +179,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">CoastComputersPlus@gmail.com</a></p>
+          <p><a href="mailto:CoastComputersPlus@gmail.com">CoastComputersPlus@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -187,7 +187,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://wa.me/0423643317">0423 643 317</a></p>
+          <p><a href="https://wa.me/0402570612">0402 570 612</a></p>
         </div>
       </div>
     </section>
