--- a/CCP-E.html
+++ b/CCP-E.html
@@ -149,7 +149,7 @@ input[type="submit"]:hover {
       <div class="about-containers">
           <div class="details-container">
           <h3>Enquiry</h3>
-          <form action="https://formsubmit.co/coastcomputersplus@gmail.com" method="POST">
+          <form action="https://formsubmit.co/36323889f1f6fcd586bf6709667081c3" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
             <br>
